# bohay

./: .gitignore  Cargo.toml  MODULE-GUIDE.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: bohay.rb
scripts/: changelog.sh  release.sh
src/: agent.rs  cli.rs  config.rs  detect.rs  event.rs  ids.rs  integration.rs  layout.rs  main.rs  persist.rs  platform.rs
src/app/: dispatch.rs  git.rs  input.rs  keys.rs  mod.rs  modules.rs  picker.rs  settings.rs
src/git/: github.rs  local.rs  mod.rs  model.rs
src/i18n/: mod.rs
src/ipc/: api.rs  client.rs  mod.rs  protocol.rs  server.rs  transport.rs
src/module/: context.rs  discovery.rs  install.rs  manifest.rs  mod.rs  paths.rs  registry.rs  runtime.rs
src/terminal/: mod.rs  pty.rs
src/terminal/vt/: alacritty.rs  mod.rs
src/ui/: borders.rs  git.rs  help.rs  mod.rs  panes.rs  picker.rs  settings.rs  sidebar.rs  status.rs  tabbar.rs  theme.rs
