[package]
name = "bohay"
version = "0.1.0"
edition = "2021"
description = "terminal workspace manager for AI coding agents"
license = "MIT"

[[bin]]
name = "bohay"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["serde"] }
portable-pty = "0.9"
alacritty_terminal = "0.26"
unicode-width = "0.2"
anyhow = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }

[profile.release]
lto = "thin"
strip = true
